Animations added for sections

--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -2,6 +2,10 @@
 
 #section-contact-us{
     color: $dark-blue;
+    overflow: hidden;
+}
+#section-contact-us .heading h1{
+    position: relative;
 }
 #section-contact-us .contact-form{
     font-size:0.9rem;
