--- a/src/app/insights/insights.component.scss
+++ b/src/app/insights/insights.component.scss
@@ -3,6 +3,9 @@
 #section-insights .heading{
     margin-bottom: $heading-bottom-margin;
 }
+#section-insights .heading-container h1{
+    position: relative;
+}
 #insights-content{
     margin-bottom: $heading-bottom-margin;
 }
