--- a/src/app/press-release/press-release.component.html
+++ b/src/app/press-release/press-release.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col">
+    <div class="col english">
       <h4>Middle East Corporate Finance Leaders Foresee Substantial Economic Growth and Plan to Increase Spending and Investment Worldwide, American Express Global Survey</h4>
       <p>Middle East finance executives report great confidence in economic growth prospects for the year ahead, finds the 2018 Global Business &amp; Spending Outlook, a survey released today by American Express Middle East.  The vast majority of respondents – more than 90% – anticipate modest to substantial economic expansion in their country, closely aligned with the worldwide trend (85%). </p>
       <a href="#" class="btn btn-primary" download="press-release-en.pdf">Download Full Press Release</a>
