--- a/src/app/reports/reports.component.scss
+++ b/src/app/reports/reports.component.scss
@@ -1,5 +1,11 @@
 @import  '~sass/variables';
 
+#section-report{
+    overflow: hidden;
+}
+#section-report .heading h1{
+    position:relative;
+}
 #section-report .report-copy{
     font-size: 1.1rem;
     padding-right: 3rem;
