--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -4,7 +4,7 @@
       <h1>Contact Us</h1>
     </div>
   </div>  
-  <div class="row">
+  <div class="row contact-form">
     <div class="col-md-12">
       <form novalidate *ngIf="formActive" [formGroup]="contactForm" (ngSubmit)="onSubmitForm()">
         <div class="row">
@@ -12,7 +12,7 @@
 
               <div class="form-group row">
                 <div class="col-sm-6">
-                  <input type="text" class="form-control" id="first-name" placeholder="First Name" formControlName="firstName">
+                  <input type="text" class="form-control" id="first-name" placeholder="First Name" formControlName="firstName" [value]="firstName" (click)="checkValidity(this.contactForm.value.firstName)">
                   <div class="errors" role="alert" *ngIf="firstNameControl.errors">
                     <div *ngIf="firstNameControl.errors.required && (firstNameControl.touched || firstNameControl.dirty)" class="alert alert-danger">Required</div>
                     <div *ngIf="firstNameControl.errors.minlength" class="alert alert-danger">Must be at least {{firstNameControl.errors.minlength.requiredLength}} letters</div>
@@ -75,20 +75,25 @@
 
           <div class="col-md-6">
 
-            <div class="form-group">
-              <textarea class="form-control" id="message" formControlName="message" placeholder="Comments/Message" rows="10"></textarea>
+            <div class="form-group row">
+              <div class="col-sm-12">
+                  <textarea class="form-control" id="message" formControlName="message" placeholder="Comments/Message" rows="9"></textarea>
+              </div>
             </div>
-            <select id="lead_source" name="lead_source"formControlName="lead_source" style="display:none;">
-              <option value="Partner Aquisition Campaign" selected="selected">CFO Survey</option>
-            </select>
-            <select id="00N20000001DX1u" name="00N20000001DX1u" title="Sub-Source" formControlName="00N20000001DX1u" style="display:none;">
-              <option value="CFOSurveyResults" selected="selected">CFOSurveyResults</option>
-            </select>
-            <select id="rating" name="rating" formControlName="rating" style="display:none;">
-              <option value="Hot">Hot</option>
-            </select>
-            <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" [disabled]="!contactForm.valid">Submit</button>
-
+            <div class="form-group row">
+              <div class="col-sm-12">
+                <select id="lead_source" name="lead_source"formControlName="lead_source" style="display:none;">
+                  <option value="Partner Aquisition Campaign" selected="selected">CFO Survey</option>
+                </select>
+                <select id="00N20000001DX1u" name="00N20000001DX1u" title="Sub-Source" formControlName="00N20000001DX1u" style="display:none;">
+                  <option value="CFOSurveyResults" selected="selected">CFOSurveyResults</option>
+                </select>
+                <select id="rating" name="rating" formControlName="rating" style="display:none;">
+                  <option value="Hot">Hot</option>
+                </select>
+                <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" [disabled]="!contactForm.valid">Submit</button>
+              </div>
+            </div>
           </div>
         </div>
         
