--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -72,16 +72,20 @@
               </select>
             </div>
           </div>
-          <select id="lead_source" name="lead_source"formControlName="lead_source" style="display:none;">
-            <option value="Partner Aquisition Campaign" selected="selected">CFO Survey</option>
-          </select>
-          <select id="00N20000001DX1u" name="00N20000001DX1u" title="Sub-Source" formControlName="00N20000001DX1u" style="display:none;">
-            <option value="CFOSurveyResults" selected="selected">CFOSurveyResults</option>
-          </select>
-          <select id="rating" name="rating" formControlName="rating" style="display:none;">
-            <option value="Hot">Hot</option>
-          </select>
-          <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" [disabled]="!cpsForm.valid">Submit</button>
+          <div class="form-group row">
+            <div class="col-sm-12">
+              <select id="lead_source" name="lead_source"formControlName="lead_source" style="display:none;">
+                <option value="Partner Aquisition Campaign" selected="selected">CFO Survey</option>
+              </select>
+              <select id="00N20000001DX1u" name="00N20000001DX1u" title="Sub-Source" formControlName="00N20000001DX1u" style="display:none;">
+                <option value="CFOSurveyResults" selected="selected">CFOSurveyResults</option>
+              </select>
+              <select id="rating" name="rating" formControlName="rating" style="display:none;">
+                <option value="Hot">Hot</option>
+              </select>
+              <button type="submit" class="submit-btn btn btn-primary mb-2 col-sm-12" [disabled]="!cpsForm.valid">Submit</button>
+            </div>
+          </div>
         </form>
       </div>
   
