--- a/src/app/presentation/presentation.component.scss
+++ b/src/app/presentation/presentation.component.scss
@@ -3,7 +3,9 @@
 #section-presentation{
     color:$dark-blue;
 }
-
+#section-presentation .heading h1{
+    position: relative;
+}
 #section-presentation .heading-container{
     margin-bottom:$heading-bottom-margin;
 }
