--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -47,4 +47,5 @@ $grid-breakpoints: (
 );
 
 $section-inner-padding: 0rem 6rem;
+$section-inner-padding-sm:0rem 2rem;
 $heading-bottom-margin: 3rem;
