--- a/src/app/cps/cps.component.scss
+++ b/src/app/cps/cps.component.scss
@@ -7,7 +7,7 @@
 #section-cps .heading h1{
     position: relative;
 }
-#section-cps .cps-form{
+#section-cps .cps-form p{
     font-size:0.9rem;
 }
 #section-cps .cps-form,
