--- a/src/app/nav-press-kit/nav-press-kit.component.html
+++ b/src/app/nav-press-kit/nav-press-kit.component.html
@@ -5,9 +5,7 @@
         <a class="nav-link" href="{{link.linkhref}}">
           <div class="icon-container">
             <div class="icon-outline">
-              <svg viewBox="0 0 8 8" class="icon">
-                <use attr.xlink:href="#{{link.svgname}}" attr.class="{{link.styleclass}}"></use>
-              </svg>
+              <i class="fas {{link.iconname}} fa-lg"></i>
             </div>
           </div>
           {{link.title}}
