--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,4 @@
 <nav id="main-nav" class="fixed-top cfo-fixed navbar navbar-expand-lg navbar-light">
-  <img src="../assets/svg/open-iconic.min.svg" class="iconic-sprite" style="display:none;" />
 
   <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -9,44 +8,32 @@
     <ul class="navbar-nav mr-auto">
       <li data-menuanchor="home" data-content="Home" data-toggle="popover" class="nav-item">
         <a class="nav-link" href="#home"> 
-          <svg viewBox="0 0 8 8" class="icon">
-            <use xlink:href="#home" class="icon-home"></use>
-          </svg>
+          <i class="fas fa-home fa-lg"></i>
         </a>
       </li>
       <li data-menuanchor="overview" data-content="Overview" data-toggle="popover" class="nav-item">
         <a class="nav-link" href="#overview">
-          <svg viewBox="0 0 8 8" class="icon">
-            <use xlink:href="#eye" class="icon-overview"></use>
-          </svg>
+          <i class="fas fa-eye fa-lg"></i>
         </a>
       </li>
       <li data-menuanchor="highlights" data-content="Highlights" data-toggle="popover" class="nav-item">
         <a class="nav-link" href="#highlights">
-          <svg viewBox="0 0 8 8" class="icon">
-            <use xlink:href="#graph" class="icon-highlights"></use>
-          </svg>
+          <i class="fas fa-chart-line fa-lg"></i>
         </a>
       </li>
       <li data-menuanchor="press-kit" data-content="Press Kit" data-toggle="popover" class="nav-item">
         <a class="nav-link" href="#press-kit">
-          <svg viewBox="0 0 8 8" class="icon">
-            <use xlink:href="#briefcase" class="icon-press-kit"></use>
-          </svg>
+          <i class="fas fa-briefcase fa-lg"></i>
         </a>
       </li>
       <li data-menuanchor="corporate-payment-solutions" data-content="Corporate Payment Solutions" data-toggle="popover" class="nav-item">
-          <a class="nav-link" href="#corporate-payment-solutions">
-            <svg viewBox="0 0 8 8" class="icon">
-              <use xlink:href="#credit-card" class="icon-cps"></use>
-            </svg>
-          </a>
+        <a class="nav-link" href="#corporate-payment-solutions">
+          <i class="fas fa-credit-card fa-lg"></i>
+        </a>
         </li>
       <li data-menuanchor="contact-us" data-content="Contact Us" data-toggle="popover" class="nav-item">
         <a class="nav-link" href="#contact-us">
-          <svg viewBox="0 0 8 8" class="icon">
-            <use xlink:href="#envelope-closed" class="icon-contact-us"></use>
-          </svg>
+          <i class="fas fa-envelope fa-lg"></i>
         </a>
       </li>
       <!--<li data-menuanchor="test" class="nav-item">
