--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -10,7 +10,7 @@
     <div>
       <div class="image-container float-left">
         <div class="overview-image">
-          <img src="../../assets/jpg/overview.jpg">
+          <img src="assets/jpg/overview.jpg">
         </div>
         <svg>
           <defs>
