--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -29,6 +29,8 @@ $dark-blue: #002337;
 $light-blue: #00a1bb;
 $white: #fff;
 $yellow: #fcb52f;
+$color-facebook: #3b5998;
+$color-linkedin: #0077b5;
 
 $font-stack: BentonSansLight;
 $font-stack-bold: BentonSansBold;
