--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,20 @@
 <div id="logo">
-  <img src="../assets/svg/logo-amex.svg" class="amex-logo">
+  <img src="assets/svg/logo-amex.svg" class="amex-logo">
+  <!--<img src="assets/svg/open-iconic.min.svg" class="iconic-sprite" style="display:none;" />-->
+</div>
+<div id="social-icons">
+  <ul class="navbar-nav">
+    <li class="nav-item facebook">
+      <a class="nav-link" href="https://web.facebook.com/AmericanExpressME" target="_blank"> 
+        <i class="fab fa-facebook-square fa-lg"></i>
+      </a>
+    </li>
+    <li class="nav-item linkedin">
+      <a class="nav-link" href="https://www.linkedin.com/company/americanexpressme" target="_blank">
+        <i class="fab fa-linkedin fa-lg"></i>
+      </a>
+    </li>
+  </ul>
 </div>
 <app-navigation></app-navigation>
 <div id="fullpage">
