--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -6,6 +6,7 @@
   </div>  
   <div class="row contact-form">
     <div class="col-md-12">
+      <p>Have a query or a comment? Just send us a message using this form. </p>
       <form novalidate *ngIf="formActive" [formGroup]="contactForm" (ngSubmit)="onSubmitForm()">
         <div class="row">
           <div class="col-md-6">
@@ -77,7 +78,7 @@
 
             <div class="form-group row">
               <div class="col-sm-12">
-                  <textarea class="form-control" id="message" formControlName="message" placeholder="Comments/Message" rows="9"></textarea>
+                  <textarea class="form-control" id="message" formControlName="message" placeholder="Comments/Message" rows="10"></textarea>
               </div>
             </div>
             <div class="form-group row">
@@ -100,7 +101,14 @@
       </form>
     </div>
     <div class="confirmation col" [class.visible]="formFilled">
-      <p>Thank you for completing the form. We have received your details.</p>
+      <p>Thank you for contacting us. We have received your message and will respond as soon as we can. 
+        </p>
     </div>
   </div>
+</div>
+<div id="footer">
+  <p>American Express is a registered trademark of American Express.<br>
+  AMEX (Middle East) B.S.C. (c) is regulated and licensed by the Central Bank of Bahrain as a Financing Company.<br>
+  AMEX (Middle East) B.S.C. (c) – Emirates is regulated and licensed by the Central Bank of the UAE (For UAE Residents)<br>
+  AMEX (Middle East) B.S.C. (c) regards the security of your personal information with the utmost confidentiality. Never provide personal or Account related details in response to an email and/or SMS, even if it appears to have come from AMEX (Middle East) B.S.C. (c)</p>
 </div>
