--- a/src/app/nav-highlights/nav-highlights.component.scss
+++ b/src/app/nav-highlights/nav-highlights.component.scss
@@ -24,6 +24,7 @@
     text-align: center;
     width:100%;
     margin-bottom: .5rem;
+    color: $light-blue;
 }
 .nav-highlights .icon-outline{
     border:2px solid $light-blue;
