--- a/src/app/insights/insights.component.html
+++ b/src/app/insights/insights.component.html
@@ -1,4 +1,4 @@
-<div id="section-insights" class="container slick-init">
+<div id="section-insights" class="container slick-init" data-anchor="insights">
   <div class="heading-container">
     <div class="heading">
       <h1>Insights</h1>
