--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -9,14 +9,6 @@ body{
 strong{
     font-family: $font-stack-bold;
 }
-@include media-breakpoint-down(xs) {
-    h1{
-        font-size: 1.7em;
-    }
-    h3{
-        font-size: 1.3em;
-    }
-}
 
 /* ANIMATIONS */
 .section{
@@ -51,6 +43,7 @@ strong{
     height:30px; 
     position:absolute;
     top:50%;
+    margin-top: -15px;
     z-index: 1040;
     font-size: 2rem;
 }
@@ -69,5 +62,28 @@ strong{
 @include media-breakpoint-down(sm){
     .container{
         padding:$section-inner-padding-sm;
+    }
+    .slick-arrow{
+        width:20px;
+        height:20px; 
+        font-size: 1.5rem;
+    }
+    .slick-next{
+        right: -25px;
+    }
+    .slick-prev{
+        left: -25px;
+    }
+}
+
+@include media-breakpoint-down(xs) {
+    body{
+        font-size: 16px;
+    }
+    h1{
+        font-size: 1.7em;
+    }
+    h3{
+        font-size: 1.3em;
     }
 }
