--- a/src/app/cps/cps.component.html
+++ b/src/app/cps/cps.component.html
@@ -1,4 +1,4 @@
-<div id="section-cps" class="container" data-anchor="corporate-payment-solutions">
+<div id="section-cps" class="container">
     <div class="heading-container">
       <div class="heading">
         <h1>American Express Corporate Solutions</h1>
