--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container" id="section-home" data-anchor="home">
+<div class="container" id="section-home">
     <div class="section-body">
         <h1>Global Business &amp; Spending Outlook 2018</h1>
         <hr class="line">
