--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div id="section-overview" class="container slick-init" data-anchor="overview">
+<div id="section-overview" class="container slick-init">
   <div class="heading-container">
     <div class="heading">
       <h1>Overview</h1>
