--- a/src/app/presentation/presentation.component.html
+++ b/src/app/presentation/presentation.component.html
@@ -1,4 +1,4 @@
-<div id="section-presentation" class="container" data-anchor="press-kit">
+<div id="section-presentation" class="container">
   <div class="heading-container">
     <div class="heading">
       <h1>Key Findings</h1>
