--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,61 +1,124 @@
-<div id="logo">
-  <img src="assets/svg/logo-amex.svg" class="amex-logo">
-  <!--<img src="assets/svg/open-iconic.min.svg" class="iconic-sprite" style="display:none;" />-->
-</div>
-<div id="social-icons">
-  <ul class="navbar-nav">
-    <li class="nav-item facebook">
-      <a class="nav-link" href="https://web.facebook.com/AmericanExpressME" target="_blank"> 
-        <i class="fab fa-facebook-square fa-lg"></i>
-      </a>
-    </li>
-    <li class="nav-item linkedin">
-      <a class="nav-link" href="https://www.linkedin.com/company/americanexpressme" target="_blank">
-        <i class="fab fa-linkedin fa-lg"></i>
-      </a>
-    </li>
-  </ul>
-</div>
-<app-navigation></app-navigation>
-<div id="fullpage">
-  <div class="section">
-    <!--<div id="video-bg">
-      <video autoplay muted loop playsinline id="home-video">
-        <source src="../assets/video/home_bg.webm" type="video/webm">
-        <source src="../assets/video/home_bg.mp4" type="video/mp4">
-      </video>
-    </div>-->
-    <div id="video-fallback"></div>
-    <app-home></app-home>
+<div id="master-container" (window:resize)="onResize($event)" >
+  <div id="logo">
+    <img src="assets/svg/logo-amex.svg" class="amex-logo">
+    <!--<img src="assets/svg/open-iconic.min.svg" class="iconic-sprite" style="display:none;" />-->
   </div>
-  <div class="section fade">
-    <app-overview></app-overview>
+  <div id="social-icons">
+    <ul class="navbar-nav">
+      <li class="nav-item facebook">
+        <a class="nav-link" href="https://web.facebook.com/AmericanExpressME" target="_blank"> 
+          <i class="fab fa-facebook-square fa-lg"></i>
+        </a>
+      </li>
+      <li class="nav-item linkedin">
+        <a class="nav-link" href="https://www.linkedin.com/company/americanexpressme" target="_blank">
+          <i class="fab fa-linkedin fa-lg"></i>
+        </a>
+      </li>
+    </ul>
   </div>
-  <div class="section fade">
-    <nav-highlights></nav-highlights>
-    <div class="slide" data-anchor="insights">
-      <app-insights></app-insights>
+  <app-navigation></app-navigation>
+  <div id="fullpage" *ngIf="desktop" [class.hidden]="!desktop" class="desktop">
+    <div class="section">
+      <div id="video-fallback" data-anchor="home"></div>
+      <app-home></app-home>
     </div>
-    <!--<div class="slide" data-anchor="videos"> Videos </div>-->
-    <div class="slide" data-anchor="report"> 
+    <div class="section fade" data-anchor="overview">
+      <app-overview></app-overview>
+    </div>
+    <div class="section fade">
+      <nav-highlights></nav-highlights>
+      <div class="slide" data-anchor="insights">
+        <app-insights></app-insights>
+      </div>
+      <div class="slide" data-anchor="report"> 
         <app-reports></app-reports>  
+      </div>
+    </div>
+    <div class="section fade">
+      <nav-press-kit></nav-press-kit>
+      <div class="slide" data-anchor="presentation"> 
+        <app-presentation></app-presentation>
+      </div>
+      <div class="slide" data-anchor="press-release"> 
+        <app-press-release></app-press-release>
+      </div>
+    </div>
+    <div class="section fade" data-anchor="corporate-payment-solutions">
+      <app-cps></app-cps>
+    </div>
+    <div class="section fade" data-anchor="contact-us">
+      <app-contact-us></app-contact-us>
+    </div>  
+  </div>
+  <div id="fullpage" *ngIf="!desktop" [class.hidden]="desktop" class="mobile">
+      <div class="section">
+        <div id="video-fallback" data-anchor="home"></div>
+        <app-home></app-home>
+      </div>
+      <div class="section fade" data-anchor="overview">
+        <app-overview></app-overview>
+      </div>
+      <div class="section fade" data-anchor="insights">
+        <app-insights></app-insights>
+      </div>
+      <div class="section fade" data-anchor="report"> 
+        <app-reports></app-reports>  
+      </div>
+      <div class="section fade" data-anchor="press-kit">
+        <app-presentation></app-presentation>
+      </div>
+      <div class="section fade" data-anchor="press-release"> 
+        <app-press-release></app-press-release>
+      </div>
+      <div class="section fade" data-anchor="corporate-payment-solutions">
+        <app-cps></app-cps>
+      </div>
+      <div class="section fade" data-anchor="contact-us">
+        <app-contact-us></app-contact-us>
+      </div>  
+    </div>
+  <!--<div id="fullpage">
+    <div class="section">
+      <div id="video-bg">
+        <video autoplay muted loop playsinline id="home-video">
+          <source src="../assets/video/home_bg.webm" type="video/webm">
+          <source src="../assets/video/home_bg.mp4" type="video/mp4">
+        </video>
+      </div>
+      <div id="video-fallback" data-anchor="home"></div>
+      <app-home></app-home>
+    </div>
+    <div class="section fade" data-anchor="overview">
+      <app-overview></app-overview>
+    </div>
+    <div class="section fade">
+      <nav-highlights></nav-highlights>
+      <div class="slide" data-anchor="insights">
+        <app-insights></app-insights>
+      </div>
+      <div class="slide" data-anchor="videos"> Videos </div>
+      <div class="slide" data-anchor="report"> 
+          <app-reports></app-reports>  
+      </div>
+    </div>
+    <div class="section fade">
+      <nav-press-kit></nav-press-kit>
+      <div class="slide" data-anchor="presentation"> 
+        <app-presentation></app-presentation>
+      </div>
+      <div class="slide" data-anchor="press-release"> 
+        <app-press-release></app-press-release>
+      </div>
+    </div>
+    <div class="section fade" data-anchor="corporate-payment-solutions">
+      <app-cps></app-cps>
+    </div>
+    <div class="section fade" data-anchor="contact-us">
+      <app-contact-us></app-contact-us>
     </div>
   </div>
-  <div class="section fade">
-    <nav-press-kit></nav-press-kit>
-    <div class="slide" data-anchor="presentation"> 
-      <app-presentation></app-presentation>
-    </div>
-    <div class="slide" data-anchor="press-release"> 
-      <app-press-release></app-press-release>
-    </div>
-  </div>
-  <div class="section fade" data-anchor="corporate-payment-solutions">
-    <app-cps></app-cps>
-  </div>
-  <div class="section fade" data-anchor="contact-us">
-    <app-contact-us></app-contact-us>
-  </div>
-</div>
+</div>-->
+
 
 
