--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<div id="section-contact-us" class="container" data-anchor="contact-us">
+<div id="section-contact-us" class="container">
   <div class="heading-container">
     <div class="heading">
       <h1>Contact Us</h1>
