--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,7 +22,7 @@
     position: relative;
 }
 
-@include media-breakpoint-down(sm){
+@include media-breakpoint-down(xs){
     .section-body{
         max-width: 100%;
     }
