--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -64,6 +64,13 @@ small: 576, medium: 768, large: 992, extra large:1200*/
     }
 }
 
+@include media-breakpoint-up(sm){
+    .navbar-expand-lg .navbar-nav .nav-link{
+        padding: .5rem;
+        text-align: center;
+    }
+}
+
 @include media-breakpoint-down(xs){
     #main-nav.cfo-fixed{
         width: 100%;
