--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -9,7 +9,7 @@
   <div id="overview-content">
     <div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-sm-6 col-lg-4">
           <div class="image-container">
             <div class="overview-image text-center">
               <img src="assets/jpg/overview.jpg">
@@ -25,13 +25,13 @@
             
           </div>
         </div>
-        <div class="col-md-8 text-justify">
+        <div class="col-sm-6 col-lg-8">
           <p>The 2018 Global Business &amp; Spending Outlook by American Express details Middle East's executives' views on the economic outlook, spending plans and the future of the technology. </p>
         </div>
       </div>
     </div>
     <div>
-      <p class="text-justify">Middle East finance executives report great confidence in the economic growth prospects for the year ahead. This optimistic climate is expected to boost business spending and investment levels thus shifting businesses in to growth mode. In 2018, the top priority for the senior executives is better meeting customers’ evolving needs with focus on new product development and mobile technology. Employment levels are also anticipated to rise. In the year ahead, more freelancers, part-time workers and temps are expected to join Middle East’s growing workforce. Visionary finance executives are taking great interest in next-generation technologies with investments in Robotics &amp; Automation and Artificial intelligence. 
+      <p>Middle East finance executives report great confidence in the economic growth prospects for the year ahead. This optimistic climate is expected to boost business spending and investment levels thus shifting businesses in to growth mode. In 2018, the top priority for the senior executives is better meeting customers’ evolving needs with focus on new product development and mobile technology. Employment levels are also anticipated to rise. In the year ahead, more freelancers, part-time workers and temps are expected to join Middle East’s growing workforce. Visionary finance executives are taking great interest in next-generation technologies with investments in Robotics &amp; Automation and Artificial intelligence. 
         </p>
     </div>  
   </div>
